Show an overview of build actions in Lucidity too

--- a/lucidity/rpc/static/index.html
+++ b/lucidity/rpc/static/index.html
@@ -27,5 +27,8 @@ Busy: <span id="busy"></span><br/>
 Free: <span id="free"></span>
 </p>
 <div id="table"></div>
+<br/><br/>
+<h1>Build Actions</h1>
+<div id="builds" class="builds"></div>
 </body>
 </html>
